fixed issues in models

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLES_URI = mongodb+srv://admin:admin@cluster0.xb99w.mongodb.net/<dbname>?retryWrites=true&w=majority
+ATLES_URI = mongodb+srv://admin:admin@cluster0.ekzkr.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority
